<resources>
    <string name="app_name">LoginApp</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="btn_login">Login</string>
    <string name="img_desc_logo">logo</string>
    <string name="btn_register_text">Don\'t have an Account? Register Here!</string>
    <string name="text_welcome">Welcome %s</string>
    <string name="text_data_user">Email : %s\nToken : %s</string>
</resources>
